# teenyKV

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
config/: cluster_config.yaml
k8s/: deployment.yaml  service.yaml
src/: config_parser.cpp  config_parser.h  key_value_store.cpp  key_value_store.h  raft_node.cpp  raft_node.h  teenyKV.cpp
